feat(backend): Add API endpoint tests
Add custom Hamcrest matcher for parsing JSON primitive into Java class